src/test/ui/rfc-2632-const-trait-impl/specialization/const-default-non-const-specialized.stderr
error: cannot specialize on const impl with non-const impl
  --> $DIR/const-default-non-const-specialized.rs:19:1
   |
LL | impl Value for FortyTwo {
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

